--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,11 +31,22 @@
   // Configure tool-specific properties.
   "customizations": {
     "vscode": {
-      "extensions": ["vortizhe.simple-ruby-erb",
-                     "mbessey.vscode-rufo",
-                     "aliariff.vscode-erb-beautify",
-                     "eamodio.gitlens",
-                     "setobiralo.erb-commenter"]
+      "extensions": [
+        "vortizhe.simple-ruby-erb",
+        "mbessey.vscode-rufo",
+        "aliariff.vscode-erb-beautify",
+        "eamodio.gitlens",
+        "setobiralo.erb-commenter",
+        "formulahendry.auto-rename-tag",
+        "dzhavat.bracket-pair-toggler",
+        "zhang-renyang.chat-gpt",
+        "formulahendry.code-runner",
+        "streetsidesoftware.code-spell-checker",
+        "yandeu.five-server",
+        "jeff-hykin.polacode-2019",
+        "Postman.postman-for-vscode",
+        "TabNine.tabnine-vscode"
+      ]
     }
   }
 
